ERRORS
import React from 'react';
^^^^^^

SyntaxError: Cannot use import statement outside a module
    at wrapSafe (internal/modules/cjs/loader.js:1053:16)
    at Module._compile (internal/modules/cjs/loader.js:1101:27)
    at Module._compile (/home/christian/ld-r/node_modules/pirates/lib/index.js:91:24)
    at Module._extensions..js (internal/modules/cjs/loader.js:1157:10)
    at Object.newLoader [as .js] (/home/christian/ld-r/node_modules/pirates/lib/index.js:96:7)
    at Module.load (internal/modules/cjs/loader.js:985:32)
    at Function.Module._load (internal/modules/cjs/loader.js:878:14)
    at Module.require (internal/modules/cjs/loader.js:1025:19)
    at require (internal/modules/cjs/helpers.js:72:18)
    at Object.<anonymous> (/home/christian/ld-ui-react/lib/components/KnowledgeGraph/PatternNetwork.js:26:39)
    at Module._compile (internal/modules/cjs/loader.js:1137:30)
    at Module._compile (/home/christian/ld-r/node_modules/pirates/lib/index.js:91:24)
    at Module._extensions..js (internal/modules/cjs/loader.js:1157:10)
    at Object.newLoader [as .js] (/home/christian/ld-r/node_modules/pirates/lib/index.js:96:7)
    at Module.load (internal/modules/cjs/loader.js:985:32)
    at Function.Module._load (internal/modules/cjs/loader.js:878:14)
    at Module.require (internal/modules/cjs/loader.js:1025:19)
    at require (internal/modules/cjs/helpers.js:72:18)
    at Object.<anonymous> (/home/christian/ld-ui-react/lib/index.js:37:46)
    at Module._compile (internal/modules/cjs/loader.js:1137:30)
    at Module._compile (/home/christian/ld-r/node_modules/pirates/lib/index.js:91:24)
    at Module._extensions..js (internal/modules/cjs/loader.js:1157:10)
npm ERR! code ELIFECYCLE
npm ERR! errno 1
npm ERR! linked-data-reactor@1.3.7 start: `node start.js`
npm ERR! Exit status 1
npm ERR! 
npm ERR! Failed at the linked-data-reactor@1.3.7 start script.
npm ERR! This is probably not a problem with npm. There is likely additional logging output above.

npm ERR! A complete log of this run can be found in:
npm ERR!     /home/christian/.npm/_logs/2020-12-09T15_06_15_401Z-debug.log

